doppelte Scrollbar Fix

--- a/src/app/ausbildung-windows/ausbildung-windows.component.css
+++ b/src/app/ausbildung-windows/ausbildung-windows.component.css
@@ -4,9 +4,8 @@
     align-items: center;
     padding-left: 10%;
     padding-right: 10%;
-    margin-top: 7.5%;
     margin-bottom: 7.5%;
-    height: 25%;
+    height: 20%;
 }
 mat-card-title{
     align-items:center;
@@ -19,7 +18,7 @@ mat-card-content{
 }
 mat-card{
     width: 30%;
-    height: 45%;
+    height: 60%;
     border-radius: 15px;
     margin: 2.5%;
     text-align: center;
@@ -28,7 +27,7 @@ mat-card{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 7%;
+    margin-top: 5%;
 }
 mat-card-actions{
     justify-content: space-around;
